--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
     <link rel="stylesheet" href="./styles/global.css">
-    <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="./fonts/fonts.css">
+    <link rel="stylesheet" href="./styles/style.css">
+
   </head>
   <body>
     <header class="header">
@@ -19,7 +20,7 @@
       </ul>
       </nav>
       <div class="header__logo">
-      <img class="header__logo-image" src="./images/logo-black.svg" alt="лого ОНО ТЕБЕ НАДО черным">
+      <a><img class="header__logo-image" src="./images/logo-black.svg" alt="лого ОНО ТЕБЕ НАДО черным"/></a>
       </div>
       <div class="header__address">
       <address class="address">
@@ -30,7 +31,7 @@
     <main>
       <section class="cover">
         <div class="overlay"></div> 
-        <h1 class="cover__title"><span class="cover__title_aligned-text">О<span class="cover__title_aligned-text_letter-spacing-extended">НО</span><span class="cover__title_aligned-text_center">ТЕ<span class="cover__title_aligned-text_letter-spacing-extended">БЕ</span><span class="cover__title_aligned-text_right"><span class="cover__title_aligned-text_letter-spacing-extended">Н</span>АД<span class="cover__title_aligned-text_right_no-letter-spacing">О</span></span></h1>
+        <h1 class="cover__title"><span class="cover__title_aligned-text">О<span class="cover__title_aligned-text_letter-spacing-extended">НО</span></span><span class="cover__title_aligned-text_center">ТЕ<span class="cover__title_aligned-text_letter-spacing-extended">БЕ</span></span><span class="cover__title_aligned-text_right"><span class="cover__title_aligned-text_letter-spacing-extended">Н</span>АД<span class="cover__title_aligned-text_right_no-letter-spacing">О</span></span></h1>
         <div class="cover__description">
           <h3 class="cover__description-text">Аукцион вещей, в которые никто не верил</h3>
           <button name="bet-button">Сделать ставку</button>
@@ -65,7 +66,7 @@
       </section>
       <section class="about">
         <div class="about__column">
-          <div class="about__logo-image_circle"><img src="./images/logo-white.svg" class="about__logo-image"/></div>
+          <div class="about__logo-image_circle"><img src="./images/logo-white.svg" alt="фон логотипа" class="about__logo-image"/></div>
         </div>
         <h2 class="about__title">Об аукционе</h2>
         <div class="about__text">
@@ -87,9 +88,9 @@
         </ul>
       </nav>
         <ul class="footer__social-list">
-          <li class="footer__social-list-item"><a href="" class="footer__social-link"><img src="./images/yt.svg" class="footer__social-icon"/></a></li>
-          <li class="footer__social-list-item"><a href="" class="footer__social-link"><img src="./images/vk.svg" class="footer__social-icon"/></a></li>
-          <li class="footer__social-list-item"><a href="" class="footer__social-link"><img src="./images/pinterest.svg" class="footer__social-icon"/></a></li>
+          <li class="footer__social-list-item"><a href="" class="footer__social-link"><img src="./images/yt.svg" alt="иконка youtube" class="footer__social-icon"/></a></li>
+          <li class="footer__social-list-item"><a href="" class="footer__social-link"><img src="./images/vk.svg" alt="иконка vk" class="footer__social-icon"/></a></li>
+          <li class="footer__social-list-item"><a href="" class="footer__social-link"><img src="./images/pinterest.svg" alt="иконка pinterest" class="footer__social-icon"/></a></li>
         </ul>
     </footer>
   </body>
